@@ -25,7 +25,11 @@
 #define NETPLAY_FULL  2
 
 #define NETPLAY_PROTOCOL_VERSION_MAJOR 0
-#define NETPLAY_PROTOCOL_VERSION_MINOR 2
+#define NETPLAY_PROTOCOL_VERSION_MINOR 3
+
+#define NETPLAY_MIN_UQM_VERSION_MAJOR 0
+#define NETPLAY_MIN_UQM_VERSION_MINOR 5
+#define NETPLAY_MIN_UQM_VERSION_PATCH 4
 
 #define NETPLAY_DEBUG
 		/* Extra debugging for netplay */
